Source/WebCore/platform/mediastream/mac/AVCaptureDeviceManager.h
@@ -51,8 +51,6 @@ public:
 
     static AVCaptureDeviceManager& singleton();
 
-    void deviceDisconnected(AVCaptureDevice*);
-
     void refreshCaptureDevices();
 
 protected:
@@ -64,6 +62,7 @@ protected:
     void registerForDeviceNotifications();
     Vector<CaptureDevice>& captureDevicesInternal();
     void updateCachedAVCaptureDevices();
+    bool isMatchingExistingCaptureDevice(AVCaptureDevice*);
 
     RetainPtr<WebCoreAVCaptureDeviceManagerObserver> m_objcObserver;
     Vector<CaptureDevice> m_devices;
